--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="Correo">Correo Electronico</string>
 
     <string name="Ingresar">Ingresar</string>
+    <string name="Conferencia">Conferencia</string>
     <string name="Salir">Salir</string>
 
 
